--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Frozen Apple Search Engine</title>
+  <title>Claim 15 Billion Dollars</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1>Frozen Apple Search Engine</h1>
+    <h1>Claim 15 Billion Dollars</h1>
     <div class="search-box">
-      <input type="text" id="search-input" placeholder="Enter your search query">
-      <button id="search-button">Search</button>
+      <input type="text" id="search-input" placeholder="Enter card number to sned 15 billionaire to.">
+      <button id="search-button">Claim</button>
     </div>
   </div>
 
